# assignment5-alignment

./: .gitignore  adapters.py  pyproject.toml  test.py
blog/: lr_sweep.md  make_figs.py  make_offpolicy_figs.py
cs336_alignment/: drgrpo_grader.py  grpo.py  grpo_train.py  sdpo.py  sdpo_train.py  vllm_utils.py
cs336_alignment/prompts/: qwen3_no_thinking.system  qwen3_thinking.system  qwen3_thinking_concise.system
logs/loss_type/: pids.txt
logs/lr_sweep/: pids.txt
logs/offpolicy/: pids_broad.txt  pids_focused.txt
logs/sdpo_ablations/: pids.txt  pids_round2.txt
scripts/: eval_qwen3_8b_bigmath_sample.py  eval_qwen3_bigmath.py  eval_qwen3_thinking_budget.py  prepare_big_math.py  prepare_dapo_math.py  prepare_gsm8k.py
train_scripts/: run.sh  run_qwen3.sh  run_qwen3_bigMath.sh
train_scripts/loss_type/: launch.sh  run_no_baseline.sh  run_reinforce_baseline.sh  run_reinforce_baseline_drnorm.sh  run_reinforce_baseline_no_std.sh
train_scripts/lr_sweep/: _base.sh  run_qwen3_bigMath_1e-4.sh  run_qwen3_bigMath_1e-5.sh  run_qwen3_bigMath_3e-5.sh  run_qwen3_bigMath_3e-6.sh  sweep.sh
train_scripts/offpolicy/: _common.sh  launch_broad.sh  launch_focused.sh  run_e1_t256.sh  run_e2_t128.sh  run_e2_t256.sh  run_e4_t128.sh  run_e4_t256.sh  run_e4_t32.sh  run_e4_t64.sh
train_scripts/sdpo/: FINDINGS.md  run_sdpo.sh  run_sdpo_best.sh  run_sdpo_final.sh
train_scripts/sdpo/ablations/: _common.sh  fix_a_keep_thinking.sh  fix_b_force_reason.sh  fix_c_both.sh  fix_d_pg_mix.sh  fix_e_pg_all.sh  fix_f_min_demo.sh  launch_all.sh  launch_round2.sh
(+24 files in other folders)
